feat: 更新版面樣式

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -5,6 +5,11 @@
   //     Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
   //     sans-serif, "Noto Sans TC",
   // }
+  html,
+  body,
+  #app {
+    @apply h-full;
+  }
   body {
     font-family: "sans-serif",
       // Inter, -apple-system, BlinkMacSystemFont,
