--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -10,12 +10,12 @@
     @apply h-full;
   }
   body {
-    font-family: "sans-serif",
+    font-family: "Noto Serif TC", "sans-serif",
       // Inter, -apple-system, BlinkMacSystemFont,
       // "Segoe UI",
       //  Roboto, Oxygen, Ubuntu, Cantarell,
       "Fira Sans",
-      "Droid Sans", "Helvetica Neue", "Noto Serif TC";
+      "Droid Sans", "Helvetica Neue";
   }
   input,
   select {
