feat: 新增首頁讀取動畫

--- a/src/assets/styles/_components.scss
+++ b/src/assets/styles/_components.scss
@@ -78,7 +78,7 @@
   }
   .logo {
     mask-image: url("@/assets/images/logo.png");
-    @apply mask-no-repeat mask-center mask-contain;
+    @apply flex-none mask-no-repeat mask-center mask-contain;
   }
   // material icon 的 偽元素用法
   // .material {
